--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
   "name": "darkspace",
+  "description": "#darkspace #app",
+  "author": "Balasubramanian",
   "version": "0.1.0",
+  "build": {
+    "appId": "com.darkspace"
+  },
+  "main": "public/electron.js",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "concurrently": "^4.1.2",
+    "cross-env": "^5.2.0",
+    "electron-is-dev": "^1.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "wait-on": "^3.3.0"
+  },
+  "devDependencies" : {
+    "electron": "^6.0.3",
+    "electron-builder": "^21.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
